test/sema/negative/wrong_condition_type.impala
fn main(i: int) -> () {
    if (i) {}
}
